Issue #3342: Unset background color of SettingUpdateBox in AgentPreferences and AdminSystemConfiguration to prevent overlapping with border.

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Agent.Admin.SystemConfiguration.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Agent.Admin.SystemConfiguration.css
@@ -118,4 +118,8 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
     background: var(--colBGDark);
 }
 
+.WidgetSimple.Setting .Content .SettingUpdateBox {
+    background-color: unset;
+}
+
 } /* end @media */
